--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,34 @@
 <div class="container">
-<div class="d-flex justify-content-center align-items-center">
-<table class="table">
-  <thead>
-    <tr>
-      <th>User ID</th>
-      <th>Name</th>
-      <th>Age</th>
-      <th>Edit</th>
-      <th>Remove</th>
-      <th>View</th>
-    </tr>
-  </thead>
- <tbody>
-   <% @users.each do |user| %>
-      <tr>
-        <td><%= user.id  %>
-        <td><%= user.name %></td>
-        <td><%= user.age %></td>
-        <td><%= button_to 'Edit', edit_user_path(user), method: 'get',class:"btn btn-primary"%></td>
-        <td><%= button_to 'Remove', user_path(user), method: 'delete', data: { confirm: 'Are you sure?' },class:"btn btn-danger" %></td>
-        <td><%= link_to 'Show', user_path(user),class:"btn btn-info"%></td>
-      </tr>
-   <% end %>
- </tbody>
-</table>
-</div>
-<%=link_to "Add a New user", new_user_path,class:"btn btn-success" %>
+  <div class="d-flex justify-content-center align-items-center">
+    <table class="table table-striped table-hover table-secondry">
+      <thead>
+        <tr>
+          <th>User ID</th>
+          <th>Name</th>
+          <th>Age</th>
+          <th>Edit</th>
+          <th>Remove</th>
+          <th>View</th>
+        </tr>
+      </thead>
+     <tbody>
+      <% @users.each do |user| %>
+          <tr>
+            <td><%= user.id  %>
+            <td><%= user.name %></td>
+            <td><%= user.age %></td>
+            <td><%= button_to 'Edit', edit_user_path(user), method: 'get',class:"btn btn-primary"%></td>
+            <td><%= button_to 'Remove', user_path(user), method: 'delete', data: { confirm: 'Are you sure?' },class:"btn btn-danger" %></td>
+            <td><%= link_to 'Show', user_path(user),class:"btn btn-info"%></td>
+          </tr>
+      <% end %>
+     </tbody>
+    </table>
+    <%if flash[:success]%>
+      <div class="alert alert-success" role="alert">
+        <%= flash[:success] %>
+      </div>
+    <% end %>
+  </div>
+    <%=link_to "Add a New user", new_user_path,class:"btn btn-success" %>
 </div>
