--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,27 @@
 <div class="container">
   <div class="row  d-flex justify-content-center align-items-center">
     <div class="col-md-6">
-      <h3>Create a New User</h3>
-      <%= form_with class:"form-floating",model: @user do |form| %>
-        <div class="input-group mb-3">
-          <%= form.text_field :name, placeholder: "name",class:"form-control" %>
-        </div>
-        <div class="input-group mb-3">
-          <%= form.text_field :age, placeholder: "age",class:"form-control" %>
-        </div>
-        <div class="input-group mb-3">
-          <%= form.submit class:"btn btn-success" %>
-        </div>
-      <% end %>
+     <div class="card border-success border-3"> 
+      <h4 class="card-header  border-success border-2">Create a New User</h4>
+      <div class="card-body">
+        <%= form_with class:"form-floating",model: @user do |form| %>
+          <%if flash[:error]%>
+            <div class="alert alert-danger" role="alert">
+              <%= flash[:error] %>
+            </div>
+          <% end %>
+          <div class="input-group mb-3">
+            <%= form.text_field :name, placeholder: "name",class:"form-control" %>
+          </div>
+          <div class="input-group mb-3">
+            <%= form.text_field :age, placeholder: "age",class:"form-control" %>
+          </div>
+          <div class="input-group mb-3">
+            <%= form.submit class:"btn btn-success" %>
+          </div>
+        <% end %>
+      </div>
+     </div>
     </div>
   </div>
 </div>
